<resources>
    <string name="app_name">Eye-D Vision</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_my_sessions">My Sessions</string>
    <string name="title_profile">Profile</string>
    <string name="title_more">More</string>
    <string name="doctor">Doctor</string>
    <string name="continue_as_a">Continue As a</string>
    <string name="patient">Patient</string>
    <string name="personal_info">Personal Info</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="mobile_no">Mobile No</string>
    <string name="hospital_name">Hospital name</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="hospital_info">Clinical Info</string>
    <string name="district">District</string>
    <string name="sign_up">Sign Up</string>
    <string name="share_app">Share App</string>
    <string name="share_app_message">Long Queue is frustrating, Let me recommend you the solution to it. Install this app and blow away the frustration:\n</string>
    <string name="login">Login</string>
    <string name="not_yet_registered_sign_up">Not yet registered? Sign Up</string>
    <string name="already_have_account_login">Already have account? Login</string>
    <string name="rate_us">Rate us</string>
    <string name="password">Password</string>
    <string name="error_password">Minimum 6 characters required</string>
    <string name="error_email">Email is invalid</string>
    <string name="error_phone">Phone is invalid</string>
    <string name="required_field">Required field</string>
    <string name="speciality">speciality</string>
    <string name="consultancy_fee">Consultancy Fee</string>
    <string name="sign_up_success_message">Signup successful</string>
    <string name="logout">Logout</string>
    <string name="session_expired">Session expired</string>
    <string name="edit">Edit</string>
    <string name="available">Available</string>
    <string name="update_profile">Update Profile</string>
    <string name="add_session">Add session</string>
    <string name="maximum_tokens_allowed">Maximum tokens allowed</string>
    <string name="select_end_time">Select end time</string>
    <string name="select_start_time">Select start time</string>
    <string name="new_session">Add new session</string>
    <string name="add_str">Add</string>
    <string name="cancel_str">Cancel</string>
    <string name="missing_fields_message">Some fields are missing</string>
    <string name="session_added">Session added successfully</string>
    <string name="booking">Booking</string>
    <string name="to">To</string>
    <string name="session_deleted">Session deleted</string>
    <string name="delete">Delete</string>
    <string name="no_data_found">No data found</string>

    <string name="hello_blank_fragment">This is booking screen under development</string>
    <string name="my_booking">My booking</string>
    <string name="search_doctor">Search doctor</string>
    <string name="not_available_today">Not available today</string>
    <string name="available_today">Available</string>
    <string name="search">Search</string>
    <string name="see_sessions">See Sessions</string>
    <string name="end_session">End Session</string>
    <string name="consulting">Consulting</string>
    <string name="consulted">Consulted</string>
    <string name="cancelled">Cancelled</string>
    <string name="hospital">Hospital:</string>
    <string name="fee">Fee:</string>
    <string name="startTime">Start Time:</string>
    <string name="endTime">End Time:</string>
    <string name="write_patient_name">Write patient name</string>
    <string name="phone_number">Phone Number</string>
    <string name="save_booking">Save Booking</string>
    <string name="booking_success">Booked successfully</string>
    <string name="glasses_store">Glasses Store</string>
    <string name="eye_tests">Eye Tests</string>
    <string name="ok">OK</string>
    <string name="negative_result">You seem to have problems with seeing details at certain distances.You should visit eye doctor to have an accurate test.</string>
    <string name="positive_result">Congratulation! Your aacuity test is superb.You have batter-than-normal vision.</string>
    <string name="history">History</string>
    <string name="suggest_prescription">Suggest Prescription</string>
    <string name="see_history">See History</string>
    <string name="my_history">My History</string>

</resources>