<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_profile">

    <fragment
        android:id="@+id/navigation_session"
        android:name="com.cybereast.modernqueue.doctor.ui.fragments.sessions.SessionsFragment"
        android:label="@string/title_my_sessions"
        tools:layout="@layout/fragment_sessions">
        <action
            android:id="@+id/action_navigation_session_to_navigation_bookings"
            app:destination="@id/navigation_bookings" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.cybereast.modernqueue.doctor.ui.fragments.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="com.cybereast.modernqueue.doctor.ui.fragments.more.MoreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more" />
    <fragment
        android:id="@+id/navigation_bookings"
        android:name="com.cybereast.modernqueue.doctor.ui.fragments.myBookings.DoctorBookingsListFragment"
        android:label="@string/booking"
        tools:layout="@layout/fragment_my_bookings" />
    <fragment
        android:id="@+id/navigation_history"
        android:name="com.cybereast.modernqueue.doctor.ui.fragments.history.PatientHistoryFragment"
        android:label="History"
        tools:layout="@layout/fragment_patient_history" >
        <action
            android:id="@+id/action_navigation_history_to_suggestPrescriptionFragment"
            app:destination="@id/suggestPrescriptionFragment" />
        <action
            android:id="@+id/action_navigation_history_to_prescriptionHistoryFragment2"
            app:destination="@id/prescriptionHistoryFragment2" />
    </fragment>
    <fragment
        android:id="@+id/suggestPrescriptionFragment"
        android:name="com.cybereast.modernqueue.doctor.ui.fragments.prescription.SuggestPrescriptionFragment"
        android:label="Suggest Prescription"
        tools:layout="@layout/fragment_suggest_prescription" />
    <fragment
        android:id="@+id/prescriptionHistoryFragment2"
        android:name="com.cybereast.modernqueue.doctor.ui.fragments.prescription.PrescriptionHistoryFragment"
        android:label="Prescription History"
        tools:layout="@layout/fragment_prescription_history" />

</navigation>