<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/_10dp">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/startTimeEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5dp"
        android:background="@drawable/shape_edit_text"
        android:focusable="false"
        android:hint="@string/select_start_time"
        android:inputType="text"
        android:lines="1"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/_10dp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/endTimeEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:background="@drawable/shape_edit_text"
        android:focusable="false"
        android:hint="@string/select_end_time"
        android:inputType="text"
        android:lines="1"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/_10dp"
        app:layout_constraintTop_toBottomOf="@+id/startTimeEt" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/noOfTokens"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:background="@drawable/shape_edit_text"
        android:hint="@string/maximum_tokens_allowed"
        android:inputType="number"
        android:lines="1"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/_10dp"
        app:layout_constraintTop_toBottomOf="@+id/endTimeEt" />


</androidx.constraintlayout.widget.ConstraintLayout>