<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".doctor.ui.activities.EditProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/signUpLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:fontFamily="@font/montserrat_extra_bold"
                android:text="@string/update_profile"
                android:textColor="@color/blue"
                android:textSize="@dimen/_15sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.cardview.widget.CardView
                android:id="@+id/personalInfoCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                app:cardCornerRadius="@dimen/_10dp"
                app:cardElevation="@dimen/_5dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="@dimen/_5dp"
                app:layout_constraintTop_toBottomOf="@+id/signUpLabel">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/loginLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="@string/personal_info"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/_20sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </androidx.appcompat.widget.AppCompatTextView>

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/firstNameEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/shape_edit_text"
                        android:hint="@string/first_name"
                        android:inputType="text"
                        android:lines="1"
                        android:maxLines="1"
                        android:paddingHorizontal="@dimen/_10dp"
                        app:layout_constraintTop_toBottomOf="@+id/loginLabel"
                        tools:layout_editor_absoluteX="0dp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/lastNameEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10dp"
                        android:background="@drawable/shape_edit_text"
                        android:hint="@string/last_name"
                        android:inputType="text"
                        android:lines="1"
                        android:maxLines="1"
                        android:paddingHorizontal="@dimen/_10dp"
                        app:layout_constraintTop_toBottomOf="@+id/firstNameEt" />


                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/mobileNoEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10dp"
                        android:background="@drawable/shape_edit_text"
                        android:hint="@string/mobile_no"
                        android:inputType="phone"
                        android:lines="1"
                        android:maxLines="1"
                        android:paddingHorizontal="@dimen/_10dp"
                        app:layout_constraintTop_toBottomOf="@+id/lastNameEt" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/clinicalInfoCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5dp"
                app:cardCornerRadius="@dimen/_10dp"
                app:cardElevation="@dimen/_5dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="@dimen/_5dp"
                app:layout_constraintTop_toBottomOf="@+id/personalInfoCard">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/clinicalInfoLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="@string/hospital_info"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/_20sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </androidx.appcompat.widget.AppCompatTextView>

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/hospitalNameEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10dp"
                        android:background="@drawable/shape_edit_text"
                        android:hint="@string/hospital_name"
                        android:inputType="text"
                        android:lines="1"
                        android:maxLines="1"
                        android:paddingHorizontal="@dimen/_10dp"
                        app:layout_constraintTop_toBottomOf="@+id/clinicalInfoLabel" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/countryNameEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10dp"
                        android:background="@drawable/shape_edit_text"
                        android:hint="@string/country"
                        android:inputType="text"
                        android:lines="1"
                        android:maxLines="1"
                        android:paddingHorizontal="@dimen/_10dp"
                        app:layout_constraintTop_toBottomOf="@+id/hospitalNameEt" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/stateEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10dp"
                        android:background="@drawable/shape_edit_text"
                        android:hint="@string/state"
                        android:inputType="textEmailAddress"
                        android:lines="1"
                        android:maxLines="1"
                        android:paddingHorizontal="@dimen/_10dp"
                        app:layout_constraintTop_toBottomOf="@+id/countryNameEt" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/districtEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10dp"
                        android:background="@drawable/shape_edit_text"
                        android:hint="@string/district"
                        android:inputType="text"
                        android:lines="1"
                        android:maxLines="1"
                        android:paddingHorizontal="@dimen/_10dp"
                        app:layout_constraintTop_toBottomOf="@+id/stateEt" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/specialityEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10dp"
                        android:background="@drawable/shape_edit_text"
                        android:hint="@string/speciality"
                        android:inputType="text"
                        android:lines="1"
                        android:maxLines="1"
                        android:paddingHorizontal="@dimen/_10dp"
                        app:layout_constraintTop_toBottomOf="@+id/districtEt" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/consultFeeEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10dp"
                        android:background="@drawable/shape_edit_text"
                        android:hint="@string/consultancy_fee"
                        android:inputType="number"
                        android:lines="1"
                        android:maxLines="1"
                        android:paddingHorizontal="@dimen/_10dp"
                        app:layout_constraintTop_toBottomOf="@+id/specialityEt" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>