<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/_10dp">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/startTimeEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:background="@drawable/shape_edit_text"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/select_start_time"
        android:inputType=""
        android:lines="1"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/_10dp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/endTimeEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:background="@drawable/shape_edit_text"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/select_end_time"
        android:inputType="text"
        android:lines="1"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/_10dp"
        app:layout_constraintTop_toBottomOf="@+id/startTimeEt" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/noOfTokens"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:background="@drawable/shape_edit_text"
        android:hint="@string/maximum_tokens_allowed"
        android:inputType="number"
        android:lines="1"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/_10dp"
        app:layout_constraintTop_toBottomOf="@+id/endTimeEt" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/sessionAddress"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100dp"
        android:layout_marginTop="@dimen/_10dp"
        android:background="@drawable/shape_edit_text"
        android:hint="Enter Location"
        android:inputType="text"
        android:lines="3"
        android:maxLines="3"
        android:paddingHorizontal="@dimen/_10dp"
        app:layout_constraintTop_toBottomOf="@+id/noOfTokens" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addSessionBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:background="@drawable/shape_button"
        android:text="@string/add_session"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/sessionAddress" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>