<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/_5dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_5dp"
        app:cardElevation="@dimen/_4dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="@dimen/_10dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_5dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/pInfoLabelTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="@string/hospital_info"
                android:textColor="@color/blue" />

            <LinearLayout
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="1"
                app:layout_constraintTop_toBottomOf="@id/pInfoLabelTv">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/dEmailLabelTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/hospital_name" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/dhospitalNamelTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20dp"
                    android:layout_weight="0.7"
                    android:fontFamily="@font/montserrat_light"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="1"
                app:layout_constraintTop_toBottomOf="@id/pInfoLabelTv">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/dMobileLabelTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/country" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/dCountryTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20dp"
                    android:layout_weight="0.7"
                    android:fontFamily="@font/montserrat_light"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="1"
                app:layout_constraintTop_toBottomOf="@id/pInfoLabelTv">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/dstateLabelTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/state" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/dStateTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20dp"
                    android:layout_weight="0.7"
                    android:fontFamily="@font/montserrat_light"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="1"
                app:layout_constraintTop_toBottomOf="@id/pInfoLabelTv">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/dDistrictLabelTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/district" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/dDistrictTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20dp"
                    android:layout_weight="0.7"
                    android:fontFamily="@font/montserrat_light"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="1"
                app:layout_constraintTop_toBottomOf="@id/pInfoLabelTv">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/dConsultancyLabelTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/consultancy_fee" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/dConsultancyFeeTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20dp"
                    android:layout_weight="0.7"
                    android:fontFamily="@font/montserrat_light"
                    android:gravity="center" />

            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>